--- a/.github/workflows/build-release-zip.yml
+++ b/.github/workflows/build-release-zip.yml
@@ -56,4 +56,8 @@ jobs:
         run: npm run build
 
       - name: Generate ZIP file
+        id: generate-zip
         uses: jdevalk/action-wordpress-plugin-build-zip@patch-1
+
+      - name: Print ZIP URL
+        run:  echo 'Artifact URL is ${{ steps.generate-zip.outputs.artifact-url }}'
