--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -19,7 +19,7 @@ jobs:
           uses: 10up/wpcs-action@fix/35-upgrade-wordpress-coding-standards-to-3.1
           with:
             standard: 'WordPress-VIP-Go'
-  10upcs:
+  tenupcs:
       name: 10upCS
       runs-on: ubuntu-latest
       steps:
