--- a/.github/workflows/wpcs.yml
+++ b/.github/workflows/wpcs.yml
@@ -9,7 +9,7 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - name: WPCS check
-          uses: 10up/wpcs-action@fix/35-upgrade-wordpress-coding-standards-to-3.1
+          uses: iamdharmesh/wpcs-action@fix/35-upgrade-wordpress-coding-standards-to-3.1
   vipcs:
       name: VIPCS
       runs-on: ubuntu-latest
