--- a/.github/workflows/deploy-to-wpdotorg.yml
+++ b/.github/workflows/deploy-to-wpdotorg.yml
@@ -16,7 +16,9 @@ jobs:
         composer install -o --no-dev --ignore-platform-reqs
 
     - name: Install SVN ( Subversion )
-      run: sudo apt-get install subversion
+      run: |
+          sudo apt-get update
+          sudo apt-get install subversion
 
     - name: WordPress Plugin Deploy
       id: deploy
