--- a/.github/workflows/repo-automator.yml
+++ b/.github/workflows/repo-automator.yml
@@ -30,5 +30,8 @@ jobs:
             team:open-source-practice
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  Spell-check:
+    runs-on: ubuntu-latest
+    steps:
       - name: Check spelling
         uses: crate-ci/typos@master
