--- a/.github/workflows/repo-automator.yml
+++ b/.github/workflows/repo-automator.yml
@@ -33,6 +33,9 @@ jobs:
   Spell-check:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Actions Repository
+        uses: actions/checkout@v4
+
       - name: Check spelling
         uses: crate-ci/typos@master
         with:
